--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
     "node-sass": "^8.0.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^3.1.4",
     "react-hook-form": "^7.43.5",
     "react-scripts": "next",
+    "react-transition-group": "^4.4.5",
     "sass": "^1.58.2",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4",
